<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
android:weightSum="1">

<ImageView
        android:layout_width="48dp"
        android:layout_height="64dp"
        android:layout_marginBottom="10dp"
        android:src="@mipmap/ic_launcher"
        android:id="@+id/imageView"
        android:scaleType="center"
        android:layout_above="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/blue_a400"
        android:text="@string/activity_sign_in_smart_hospital"
        android:textSize="24sp"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/activity_sign_in_user_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:inputType="textEmailAddress"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/activity_sign_up_email"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:inputType="textPassword"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/activity_sign_in_password"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="32dp"
        android:textColor="@color/white"
        android:background="@color/light_green_a700"
        android:text="@string/activity_sign_in_sign_up"/>


</LinearLayout>